# LLVM19-Examples

./: .gitignore  flake.nix
arrays/: CMakeLists.txt
bounds_check/src/: main.cpp
char_access_of_string/src/: main.cpp
pointer_to_arrays/src/: main.cpp
